# projectx

./: .env.example  .gitignore  .kilocodemodes  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_TEST_REPORT.md  ARCHITECTURE_RUST_WARDEN.md  AUTONOMOUS_ARCHITECTURE.md  AUTONOMY_SYSTEM_AUDIT.md  COGNITIVE_LOOP.md  COGNITIVE_ORCHESTRATOR_ARCHITECTURE.md  COGNITIVE_SYSTEMS.md  COMPREHENSIVE_TEST_REPORT.md  CONSOLE_ARCHITECTURE.md  DOCUMENTATION_INDEX.md  FALLBACK_SECURITY_DOCUMENTATION.md  FINAL_INTEGRATION_REPORT.md  FINAL_PROJECT_ASSESSMENT_REPORT.md  FINAL_SYSTEM_EVALUATION_REPORT.md  FORENSIC_AUDIT_REVISED_2026-03-06.md  FORENSIC_DEVELOPMENT_AUDIT_REPORT.md  HARDWARE_FAIL_CLOSED_ARCHITECTURE.md  HCB_PROTOCOL_DESIGN.md  IPC_SPEC.md  ITHERIS_AUDIT_REPORT.md  ITHERIS_DOCUMENTATION.md  ITHERIS_TEST_REPORT_2026-03-12.md  JARVIS_SECURITY_AUDIT_REPORT.md  JULIA_RUST_INTEROP_REPORT.md  Manifest.md  Manifest.toml  PART4_COMPREHENSIVE_AUDIT.md  PHASE3_CHAOS_ANALYSIS_REPORT.md  PHASE7_SUBSTRATE_SOVEREIGNTY.md  PHASE9_TRUTH_CHECK_REPORT.md  PRODUCTION_HARDENING_FAIL_CLOSED_TESTS.md  PROJECT_DOCUMENTATION.md  Project.toml  README.md  SECURITY.md  (+38 more)
.github/: codeql-config.yml
.idx/: dev.nix
Itheris/: README.md  run.sh
Itheris/Brain/: Cargo.toml  itheris_speech.py  law.txt  terminl.txt  trt.txt
Itheris/Brain/Src/: api_bridge.rs  audit.txt  boot.rs  crypto.rs  federation.rs  iot_bridge.rs  kernel.rs  ledger.rs  lib.rs  llm_advisor.rs  main.rs  openssl_config.rs  panic_translation.rs  protocol.rs  threat_model.rs  validation.txt
Itheris/Brain/Src/boot/: mod.rs  paging.rs
Itheris/Brain/Src/boot_sequence/: ignition_sequence.rs  mod.rs  stage1_pcr.rs
Itheris/Brain/Src/container/: mod.rs
Itheris/Brain/Src/governance/: constitution.rs  intent_validator.rs
Itheris/Brain/Src/identity/: svid.rs  workload_api.rs
Itheris/Brain/Src/iot/: actuation_router.rs  device_registry.rs  mod.rs  telemetry_stream.rs
Itheris/Brain/Src/ipc/: mod.rs
Itheris/Brain/Src/observability/: dashboard.rs  metrics_collector.rs  mod.rs
Itheris/Brain/Src/security/: tpm_unseal.rs
Itheris/Brain/Src/tpm/: mod.rs
active-inference/: ActiveInference.jl  Project.toml  test_active_inference.jl
adaptive-kernel/: COGNITIVE_CYCLE_TRACE.md  COMPREHENSIVE_DIAGNOSTIC_REPORT.md  CORE_DOCTRINE.md  DELIVERY.md  DESIGN.md  FAILURE_MODES.md  HSM_INTEGRATION.md  MILESTONES.md  Manifest.toml  PHASE2_MIGRATION.md  PHASE6_SOVEREIGNTY_VALIDATION_REPORT.md  Project.toml  QUICKSTART.md  README.md  STAGE4_AUTONOMOUS_SELF_IMPROVEMENT_ARCHITECTURE.md  STAGE4_IMPLEMENTATION_SUMMARY.md  START_HERE.md  context_poisoning_results.json  coverage.jl  run.jl  run_diagnostic.jl  run_kernel.jl  runtests.jl  test_ipc_comprehensive_results.json  test_ipc_integration_results.json  test_ipc_results.json  test_ipc_validation.jl  test_results.json  test_results.txt  test_results.xml  types.jl
cognitive-sandbox/: Cargo.toml  README.md  build_wasm.sh
cognitive-sandbox/modules/: action.wat  librarian.wat  sentry.wat
cognitive-sandbox/src/: lib.rs  main.rs
console/: Cargo.toml
console-www/: README.md  build.sh  index.html
console/src/: lib.rs
console/src-tauri/: Cargo.toml
console/src-tauri/src/: main.rs
console/src/components/: metabolic_tile.rs  mod.rs
console/src/components/tiles/: mod.rs
console/src/pages/: containment.rs  decision_spine.rs  mod.rs
console/src/proto/: warden.rs
console/src/services/: grpc.rs  grpc_web.rs  mod.rs
console/src/state/: mod.rs  signals.rs  theme.rs
console/src/styles/: bento.css
experimental/: README.md
gpio-bridge/: actuator_controller.py  comms.py  config.yaml  emergency_handler.py  gpio-bridge.service  heartbeat_monitor.py  main.py  requirements.txt  setup.sh
interfaces/: Interfaces.jl
itheris-daemon/: Cargo.toml  README.md  build.rs  check_output.txt
itheris-daemon/src/: capabilities.rs  emergency.rs  federated_p2p.rs  ffi.rs  flow_integrity.rs  grpc.rs  isolation.rs  julia_runtime.rs  jwt_auth.rs  kernel.rs  lib.rs  main.rs  risk_classifier.rs  safe_http.rs  safe_shell.rs  secrets.rs  secure_boot.rs  secure_confirmation.rs  shared_memory.rs  sovereignty_gate.rs  task_orchestrator.rs  types.rs  warden.rs
itheris-daemon/src/hardware/: emergency_gpio.rs  heartbeat.rs  kill_chain.rs  memory_protector.rs  mod.rs  panic_handler.rs  watchdog.rs
itheris_link/: pubspec.yaml
itheris_shell/: Cargo.toml
itheris_shell/src/: bridge.rs  capabilities_gate.rs  main.rs  types.rs
jarvis/: DOCUMENTATION.md  Manifest.toml  Project.toml  README.md
jarvis_nerves/: Cargo.toml
jarvis_nerves/src/: main.rs
jarvis_nerves/src/reflex/: classifier.rs  commands.rs  mod.rs
jarvis_runtime/: Cargo.toml
jarvis_runtime/src/: entity.rs  event_bus.rs  graph_query.rs  inference.rs  knowledge_graph.rs  lib.rs  main.rs  metrics.rs  pattern_detector.rs  user.rs
jarvis_runtime/src/sensors/: file_watcher.rs  mod.rs
jarvis_runtime/src/warden/: auth.rs  capabilities.rs  confirmation.rs  flow_integrity.rs  mod.rs  risk_classifier.rs  secrets.rs
jarvis_runtime/tests/: integration_test.rs
legacy/: Brian.jl  IPC.jl  test_results_itheris.json  test_results_rust_ipc.json
memory-bridge/: README.md  test_bridge.jl
memory-bridge/rust/: Cargo.toml
memory-bridge/rust/src/: lib.rs
plans/: AI_CODING_AGENT_PROMPT.md  BAREMETAL_OS_ARCHITECTURE.md  BAREMETAL_OS_IMPLEMENTATION_PLAN.md  BAREMETAL_OS_TEST_REPORT.md  CONSCIOUSNESS_METRICS_DESIGN.md  FAIL_CLOSED_TEST_SPECIFICATION.md  FEDERATED_INTELLIGENCE_ARCHITECTURE.md  FINAL_AUDIT_REPORT.md  HARDWARE_FAIL_CLOSED_SPECIFICATION.md  ITHERIS_JARVIS_GAP_ANALYSIS_ROADMAP.md  JARVIS_EXECUTABLE_ARCHITECTURE.md  JARVIS_IMPLEMENTATION_BLUEPRINT.md  JARVIS_NEUROSYMBOLIC_ARCHITECTURE.md  OS_INTERFACE_ARCHITECTURE.md  PHASE6_FINAL_REPORT.md  PHASE7_CRITICAL_REMEDIATION_PLAN.md  itheris_critical_fixes.md  (+12 more)
rust-warden/: Cargo.toml
rust-warden/.cargo/: config.toml
rust-warden/src/: vmx.rs
rust-warden/src/ipc/: mod.rs
rust-warden/src/tpm/: mod.rs
rust-warden/tests/: test_guest.rs  test_hypervisor.rs
tui/: Cargo.toml  build.rs
tui/src/: main.rs
(+443 files in other folders)
