[package]
name = "cognitive-sandbox"
version = "0.1.0"
edition = "2021"
description = "Wasmtime runtime host for ITHERIS Ω Bio-mimetic Cognitive Architecture"

[dependencies]
wasmtime = "14.0"
wasmtime-wasi = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.19"

[lib]
name = "cognitive_sandbox"
path = "src/lib.rs"

[[bin]]
name = "cognitive-sandbox"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
