[package]
name = "itheris-daemon"
version = "1.0.0"
edition = "2021"
authors = ["ITHERIS Team"]
description = "ITHERIS Sovereign Runtime Daemon - Manages Julia brain subprocess with fail-closed security"
license = "PROPRIETARY"

[[bin]]
name = "itheris-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
axum = "0.7"
regex = "1.10"

# Julia integration
jlrs = "0.21"
once_cell = "1.19"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
