[package]
name = "itheris_shell"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
nix = { version = "0.27", features = ["signal", "process"] }
rand = "0.8"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
