[package]
name = "rust-warden"
version = "1.0.0"
edition = "2021"
authors = ["Warden Hypervisor Team"]
description = "Rust Warden Type-1 Hypervisor - Secure Foundation for Julia Digital Brain"

[dependencies]
# Core x86_64 hardware access
x86_64 = "7.0"

# Volatile memory access
volatile = "0.5"

# Spin-based synchronization primitives
spin = "0.9"

# Lock-free ring buffer
atomicring = "0.3"

# TPM 2.0 TCTI interface
tpm2-tcti = "0.8"

# Cortex-M for WDT (if needed)
cortex-m = "0.7"

# Bitflags for bit manipulation
bitflags = "2.4"

# Zero-copy deserialization
zerocopy = { version = "0.7", features = ["derive"] }

# Required for no_std
bare-metal = "1.0"
 bootloader = "0.9"

[dev-dependencies]
rand = "0.8"
once_cell = "1.19"

[features]
default = ["mock", "std"]
mock = []
std = []

[profile.release]
opt-level = 3
lto = true

[package.metadata.rust-docs]
default-run = "rust-warden"

[[bin]]
name = "rust-warden"
path = "src/main.rs"
test = false
doc = false
