[package]
name = "itheris-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.25"
sysinfo = "0.30"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "itheris-tui"
path = "src/main.rs"
