[package]
name = "itheris"
version = "5.0.0"
edition = "2021"
authors = ["badra222"]
description = "Sovereign Intelligence Kernel - Bare-Metal Ring 0 Microkernel"
license = "PROPRIETARY"
repository = "https://github.com/badra222/itheris"

[lib]
name = "itheris"
path = "Src/lib.rs"

[[bin]]
name = "itheris"
path = "Src/main.rs"

[dependencies]
ed25519-dalek = "2.0"
zmq = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
hex = "0.4"
sha2 = "0.10"
rand = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
libc = "0.2"
bitflags = "1.3"
lockfree = "0.5"
buddy_system_allocator = "0.5"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
base64 = "0.21"
log = "0.4"
regex = "1.0"

[dev-dependencies]
matches = "0.1"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
