[package]
name = "itheris-console-tauri"
version = "0.1.0"
edition = "2021"
authors = ["ITHERIS Team <team@itheris.io>"]
description = "ITHERIS Console - Tauri Desktop Application"

[lib]
name = "itheris_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri
tauri = { version = "1.6", features = ["shell-open", "window-all", "dialog-all"] }

# Leptos
leptos = { version = "0.6", features = ["wasm"] }
leptos_router = "0.6"

# WASM
wasm-bindgen = "0.2"

# gRPC and Protobuf
tonic = "0.10"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
